# dpr-simulator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
src/: __init__.py
src/config/: __init__.py  examples.py  settings.py
src/core/: __init__.py  faction_data.py  komisi_data.py  member_factory.py  simulator.py
src/core/agents/: __init__.py  absorb_agent.py  base.py  compile_agent.py  followup_agent.py
src/models/: __init__.py  aspirasi.py  dpr_member.py  responses.py
src/ui/: __init__.py  app.py
